# screen_rec

./: .gitignore  CMakeLists.txt  README.md  capture.h  capture.mm  functions.cpp  functions.h  main.cpp  ocr.cpp  ocr.h
